<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thermostaat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="changeWeekprogram">Change weekprogram</string>
    <string name="title_activity_change_weekprogram">ChangeWeekprogram</string>
    <string name="changeSunday">Sunday</string>
    <string name="changeMonday">Monday</string>
    <string name="changeTuesday">Tuesday</string>
    <string name="changeWednesday">Wednesday</string>
    <string name="changeThursday">Thursday</string>
    <string name="changeFriday">Friday</string>
    <string name="changeSaturday">Saturday</string>
    <string name="title_activity_change_day">ChangeDay</string>
    <string name="set_temperature">Set Temperature</string>
    <string-array name="time_array">
        <item >00:00</item>
        <item >01:00</item>
        <item >02:00</item>
        <item >03:00</item>
        <item >04:00</item>
        <item >05:00</item>
        <item >06:00</item>
        <item >07:00</item>
        <item >08:00</item>
        <item >09:00</item>
        <item >10:00</item>
        <item >11:00</item>
        <item >12:00</item>
        <item >13:00</item>
        <item >14:00</item>
        <item >15:00</item>
        <item >16:00</item>
        <item >17:00</item>
        <item >18:00</item>
        <item >19:00</item>
        <item >20:00</item>
		<item >21:00</item>
        <item >22:00</item>
        <item >23:00</item>
    </string-array>
    <string-array name="day_array">
        <item >Sunday</item>
        <item >Monday</item>
        <item >Tuesday</item>
        <item >Wednesday</item>
        <item >Thursday</item>
        <item >Friday</item>
        <item >Saturday</item>
    </string-array>
    <string name="changeTempProfile">Change Temperature Profile</string>
    <string name="title_activity_temp_profile">Temperature Profile Settings</string>
    <string name="toggle_weekprogram_off">The weekprogram is now off</string>
    <string name="toggle_weekprogram_on">The weekprogram is now on</string>

</resources>
